@@ -15,6 +15,7 @@ Fixes:
     * Add missing files in the tarballs.
     * Prevent crash when running nested edje_object_signal_emit with edje_object_signal_callback_{add,del}.
     * Do actually verify that the file on disk is different from the file we have loaded.
+    * Preserve user bix and table items during call of edje_object_file_set.
 
 Edje 1.2.0
 
